--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -31,7 +31,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: Dockerfile
+        file: .Dockerfile
         push: true
         tags: wenutu/vscode-tunnel:latest
         platforms: linux/amd64,linux/arm64,linux/arm/v7
