--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -1,10 +1,7 @@
-name: Docker Build and Push Multi-Arch
+name: Build and Push Docker Image
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -12,31 +9,26 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Code
+    - name: Checkout code
       uses: actions/checkout@v2
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Login to Docker Hub
+    - name: Login to Docker Registry
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKENS }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push
+    - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
         context: .
         file: .Dockerfile
+        tags: "wenutu/vscode-tunnel:latest"
         push: true
-        tags: wenutu/vscode-tunnel:latest
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
         build-args: VSCODE_VERSION=latest
 
     - name: Deploy (optional)
-      run: echo "Deployment can be customized here"
-
+      run: echo "Deployment steps can be customized based on deployment needs"
