--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -19,14 +19,14 @@ jobs:
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        password: ${{ secrets.DOCKER_TOKENS }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
         context: .
         file: .Dockerfile
-        tags: "wenutu/vscode-tunnel:latest"
+        tags: wenutu/vscode-cli-tunnel:latest
         push: true
         build-args: VSCODE_VERSION=latest
 
