--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -1,33 +1,32 @@
-name: Build and Push Docker Image
+name: Build and publish image
 
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
+  schedule:
+    - cron: '0 3 * * 1'
+  workflow_dispatch:
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-22.04
+  build:
+    runs-on: ubuntu-latest
+    name: Build and publish image job
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3 
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Login to Docker Registry
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKENS }}
+      - name: Login to Docker Registry
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: .Dockerfile
-        tags: wenutu/vscode-cli-tunnel:latest
-        push: true
-
-    - name: Deploy (optional)
-      run: echo "Deployment steps can be customized based on deployment needs"
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          tags: wenutu/vscode-remote-tunnels:latest, wenutu/vscode-remote-tunnels:1.0.0
+          platforms: linux/amd64, linux/arm64, linux/arm/v7
+          push: true
