--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          password: ${{ secrets.DOCKER_TOKENS }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
