--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -4,19 +4,24 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "Dockerfile"
+      - "src/**"
   release:
     types: [published]
   schedule:
-    - cron: '0 3 * * 1'
+    - cron: "0 3 1 * *"
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build and publish image job
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4 
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -27,9 +32,23 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKENS }}
 
+      - name: Get latest VS Code version
+        id: vscode-version
+        run: |
+          LATEST_TAG=$(curl -s https://api.github.com/repos/microsoft/vscode/tags | jq -r '.[0].name')
+          echo "LATEST_TAG=${LATEST_TAG}" >> $GITHUB_ENV
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          tags: wenutu/vscode-remote-tunnels:latest, wenutu/vscode-remote-tunnels:1.0.0
+          context: .
+          file: ./Dockerfile
+          build-args: |
+            TARGETARCH=${{ matrix.platform.arch }}
+            BUILD=${{ steps.vscode-version.outputs.LATEST_TAG }}
+          tags: wenutu/vscode-remote-tunnels:latest, wenutu/vscode-remote-tunnels:${{ env.LATEST_TAG }}
           platforms: linux/amd64, linux/arm64, linux/arm/v7
           push: true
+
+      - name: Cleanup post build
+        run: docker system prune -af
