--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,14 @@
-version: '3.8'
+version: '3.3'
 
 services:
   vscode-tunnel:
     build: .
     container_name: vscode_tunnel
+    environment:
+      - PROVIDER=github
+      - BUILD=stable
+      - MACHINE_NAME=vscode-tunnel-docker
     volumes:
-      - .:/workspace
-    ports:
-      - "3000:3000"  # Port for accessing the VSCode tunnel
+      - ./vscode_data:/home/vscode/.vscode-server
+      - ./vscode_cli_data:/home/vscode/.vscode/cli
     restart: unless-stopped
