--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -15,13 +15,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu:22.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        platform:
-          - arch: amd64
-          - arch: arm64
-          - arch: arm/v7
+        platform: [amd64, arm64, arm/v7]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -62,7 +59,7 @@ jobs:
           context: .
           file: ./Dockerfile
           build-args: |
-            TARGETARCH=${{ matrix.platform.arch }}
+            TARGETARCH=${{ matrix.platform }}
           tags: wenutu/vscode-tunnel-docker:latest, wenutu/vscode-tunnel-docker:${{ env.LATEST_TAG }}
           platforms: linux/amd64, linux/arm64, linux/arm/v7
           push: true
