--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -40,14 +40,14 @@ jobs:
         run: |
           # Fetch the latest tag from GitHub and format it for Docker tag
           latest_tag=$(curl -s https://api.github.com/repos/microsoft/vscode/releases/latest | jq -r '.tag_name')
-          echo "LATEST_TAG=$latest_tag" >> GITHUB_ENV
+          echo "LATEST_TAG=$latest_tag" >> $GITHUB_ENV
 
       - name: Check if image exists
         id: check-image
         run: |
           # Using Docker CLI to check if the tag already exists in your Docker repository
           exists=$(docker pull wenutu/vscode-tunnel-docker:LATEST_TAG > /dev/null 2>&1 && echo "yes" || echo "no")
-          echo "IMAGE_EXISTS=$exists" >> GITHUB_ENV
+          echo "IMAGE_EXISTS=$exists" >> $GITHUB_ENV
 
       - name: Build and push Docker image
         #if: steps.check-image.outputs.exists == 'no'
